--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <img class="img-flex" src="images/andromeda.jpg" alt="">
     <div class="banner-content wrapper island">
       <div class="text-center gutter-1-2">
-        <h1 class="zetta push-0">Space & Time Explorer Person</h1>
-        <p class="giga">Space & Time Explorer Person, who has a name that nobody knows (except his Wife), travels the time vortex solving problems, meeting different alien species and generally being meddlesome.</p>
+        <h1 class="yotta push-0">Space & Time Explorer Person</h1>
+        <p class="tera">Space & Time Explorer Person, who has a name that nobody knows (except his Wife), travels the time vortex solving problems, meeting different alien species and generally being meddlesome.</p>
       </div>
     </div>
   </div>
