--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
   <div class="banner">
     <img class="img-flex" src="images/andromeda.jpg" alt="">
-    <div class="banner-content wrapper island">
-      <div class="text-center gutter-1-2">
+    <div class="banner-content wrapper">
+      <div class="text-center">
         <h1 class="yotta push-0">Space & Time Explorer Person</h1>
         <p class="tera">Space & Time Explorer Person, who has a name that nobody knows (except his Wife), travels the time vortex solving problems, meeting different alien species and generally being meddlesome.</p>
       </div>
